fix: Change repo name

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -3,7 +3,7 @@
 	"index": "/index.html",
 	"assetGroups": [
 		{
-			"name": "js-ng_articles",
+			"name": "ts-ng_articles",
 			"installMode": "prefetch",
 			"resources": {
 				"files": [
