--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "js-ng-articles",
+	"name": "ts-ng-articles",
 	"version": "1.0.0",
 	"license": "MIT",
 	"scripts": {
@@ -30,6 +30,7 @@
 		"@ssv/tools": "^0.8.1",
 		"@types/lodash": "^4.14.157",
 		"bootstrap": "^4.5.0",
+		"core-js": "^2.6.12",
 		"font-awesome": "^4.7.0",
 		"lodash": "^4.17.15",
 		"rxjs": "~6.6.0",
@@ -37,22 +38,22 @@
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1000.1",
+		"@angular-devkit/build-angular": "^0.1000.8",
 		"@angular/cli": "~10.0.1",
 		"@angular/compiler-cli": "~10.0.2",
 		"@angular/language-service": "~10.0.2",
-		"@types/node": "^14.0.14",
 		"@types/jasmine": "~3.5.11",
 		"@types/jasminewd2": "~2.0.8",
+		"@types/node": "^14.0.14",
 		"codelyzer": "^6.0.0",
 		"http-server": "^0.12.3",
-		"jasmine-core": "~3.5.0",
+		"jasmine-core": "~3.8.0",
 		"jasmine-spec-reporter": "~5.0.0",
 		"karma": "~5.0.0",
 		"karma-chrome-launcher": "~3.1.0",
 		"karma-coverage-istanbul-reporter": "~3.0.2",
 		"karma-jasmine": "~3.3.0",
-		"karma-jasmine-html-reporter": "^1.5.0",
+		"karma-jasmine-html-reporter": "^1.7.0",
 		"protractor": "~7.0.0",
 		"rimraf": "^3.0.2",
 		"ts-node": "~8.10.2",
