--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"js-ng_articles": {
+		"ts-ng_articles": {
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
@@ -17,7 +17,7 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": "dist/js-ng_articles",
+						"outputPath": "dist/ts-ng_articles",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
@@ -71,18 +71,18 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"browserTarget": "js-ng_articles:build"
+						"browserTarget": "ts-ng_articles:build"
 					},
 					"configurations": {
 						"production": {
-							"browserTarget": "js-ng_articles:build:production"
+							"browserTarget": "ts-ng_articles:build:production"
 						}
 					}
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "js-ng_articles:build"
+						"browserTarget": "ts-ng_articles:build"
 					}
 				},
 				"test": {
@@ -119,18 +119,18 @@
 					"builder": "@angular-devkit/build-angular:protractor",
 					"options": {
 						"protractorConfig": "e2e/protractor.conf.js",
-						"devServerTarget": "js-ng_articles:serve"
+						"devServerTarget": "ts-ng_articles:serve"
 					},
 					"configurations": {
 						"production": {
-							"devServerTarget": "js-ng_articles:serve:production"
+							"devServerTarget": "ts-ng_articles:serve:production"
 						}
 					}
 				}
 			}
 		}
 	},
-	"defaultProject": "js-ng_articles",
+	"defaultProject": "ts-ng_articles",
 	"cli": {
 		"analytics": "420c9a77-bc8c-4149-b9d9-02459302fa81"
 	}
