--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"@angular/forms": "~10.0.2",
 		"@angular/platform-browser": "~10.0.2",
 		"@angular/platform-browser-dynamic": "~10.0.2",
+		"@angular/platform-server": "^13.3.11",
 		"@angular/router": "~10.0.2",
 		"@angular/service-worker": "~10.0.2",
+		"@auth0/angular-jwt": "^5.0.2",
 		"@ssv/core": "^0.6.1",
 		"@ssv/tools": "^0.8.1",
 		"@types/lodash": "^4.14.157",
